--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+aiofiles==23.2.1
 aiohttp==3.9.3
 aiosignal==1.2.0
+altair==5.2.0
+annotated-types==0.6.0
 anyio==4.3.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -17,6 +20,7 @@ certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==2.0.4
 click==8.1.7
+colorama==0.4.6
 comm==0.2.1
 contourpy==1.2.0
 cycler==0.11.0
@@ -27,19 +31,23 @@ defusedxml==0.7.1
 dill==0.3.6
 exceptiongroup==1.2.0
 executing==0.8.3
+fastapi==0.110.0
 fastjsonschema==2.19.1
+ffmpy==0.3.2
 filelock==3.13.1
-Flask==2.2.2
 fonttools==4.25.0
 fqdn==1.5.1
 frozenlist==1.4.0
 fsspec==2023.10.0
 gmpy2==2.1.2
+gradio==4.21.0
+gradio_client==0.12.0
 h11==0.14.0
 httpcore==1.0.4
 httpx==0.27.0
 huggingface-hub==0.20.3
 idna==3.4
+importlib_resources==6.2.0
 ipykernel==6.28.0
 ipython==8.20.0
 ipywidgets==8.1.2
@@ -65,10 +73,15 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.3
 jupyterlab_widgets==3.0.10
 kiwisolver==1.4.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.0
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==3.0.2
+mkl-fft==1.3.8
+mkl-random==1.2.4
+mkl-service==2.4.0
 mpmath==1.3.0
 multidict==6.0.4
 multiprocess==0.70.14
@@ -82,6 +95,7 @@ notebook==7.1.1
 notebook_shim==0.2.4
 numexpr==2.8.7
 numpy==1.26.4
+orjson==3.9.15
 overrides==7.7.0
 packaging==23.1
 pandas==2.1.4
@@ -100,6 +114,9 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==14.0.2
 pycparser==2.21
+pydantic==2.6.4
+pydantic_core==2.16.3
+pydub==0.25.1
 Pygments==2.15.1
 pyparsing==3.0.9
 PyQt5==5.15.10
@@ -107,6 +124,7 @@ PyQt5-sip==12.13.0
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
+python-multipart==0.0.9
 pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.2
@@ -118,42 +136,55 @@ requests==2.31.0
 responses==0.13.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.7.1
 rpds-py==0.18.0
+ruff==0.3.2
 safetensors==0.4.2
 scikit-learn==1.3.0
 scipy==1.11.4
 seaborn==0.12.2
+semantic-version==2.10.0
 Send2Trash==1.8.2
 sentencepiece==0.2.0
 setuptools==68.2.2
+shellingham==1.5.4
 sip==6.7.12
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.2.0
+starlette==0.36.3
 sympy==1.12
 terminado==0.18.0
 threadpoolctl==2.2.0
 tinycss2==1.2.1
 tokenizers==0.15.1
 tomli==2.0.1
+tomlkit==0.12.0
+toolz==0.12.1
 torch==2.2.0
 torchaudio==2.2.0
+torchvision==0.15.2a0
 tornado==6.3.3
 tqdm==4.65.0
 traitlets==5.7.1
 transformers==4.38.1
 triton==2.2.0
+typer==0.9.0
 types-python-dateutil==2.8.19.20240106
 typing_extensions==4.9.0
 tzdata==2023.3
 uri-template==1.3.0
 urllib3==2.1.0
+uvicorn==0.28.0
 wcwidth==0.2.5
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
+websockets==11.0.3
 Werkzeug==2.3.8
 wheel==0.41.2
 widgetsnbextension==4.0.10
+xgboost==2.0.3
+xxhash==2.0.2
 yarl==1.9.3
