--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.28.0
 aiofiles==23.2.1
 aiohttp==3.9.3
 aiosignal==1.2.0
@@ -29,11 +30,14 @@ debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.6
+evaluate==0.4.1
 exceptiongroup==1.2.0
 executing==0.8.3
 fastapi==0.110.0
 fastjsonschema==2.19.1
+ffmpy==0.3.2
 filelock==3.13.1
+Flask==2.2.2
 fonttools==4.25.0
 fqdn==1.5.1
 frozenlist==1.4.0
@@ -158,12 +162,13 @@ tokenizers==0.15.1
 tomli==2.0.1
 tomlkit==0.12.0
 toolz==0.12.1
-torch==2.2.0
-torchaudio==2.2.0
+torch==2.2.1
+torchaudio==2.2.1
+torchvision==0.17.1
 tornado==6.3.3
 tqdm==4.65.0
 traitlets==5.7.1
-transformers==4.38.1
+transformers==4.38.2
 triton==2.2.0
 typer==0.9.0
 types-python-dateutil==2.8.19.20240106
