--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-          fetch-depth: 0
+        fetch-depth: 0
+    - name: Fetch Git LFS files
+        run: git lfs pull
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
