--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Push to hub
         env:
           HF: ${{ secrets.HUGGINGFACE }}
-        run: git push --force https://huggingface.co/spaces/zaidmehdi/arabic-dialect-classifier
+        run: git push --force "https://$HF@huggingface.co/spaces/zaidmehdi/arabic-dialect-classifier"
