--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          lfs: true
       - name: Add remote 
         env:
           HF: ${{ secrets.HUGGINGFACE }}
@@ -22,4 +23,4 @@ jobs:
       - name: Push to hub
         env:
           HF: ${{ secrets.HUGGINGFACE }}
-        run: git push --force "https://$HF@huggingface.co/spaces/zaidmehdi/arabic-dialect-classifier"
+        run: git push --force https://zaidmehdi:$HF@huggingface.co/spaces/zaidmehdi/arabic-dialect-classifier main
